@@ -673,6 +673,10 @@ public:
 		add_label_to_sizer (table, panel, _("From address"), true);
 		_kdm_from = new wxTextCtrl (panel, wxID_ANY);
 		table->Add (_kdm_from, 1, wxEXPAND | wxALL);
+
+		add_label_to_sizer (table, panel, _("CC address"), true);
+		_kdm_cc = new wxTextCtrl (panel, wxID_ANY);
+		table->Add (_kdm_cc, 1, wxEXPAND | wxALL);
 		
 		_kdm_email = new wxTextCtrl (panel, wxID_ANY, wxEmptyString, wxDefaultPosition, wxSize (480, 128), wxTE_MULTILINE);
 		s->Add (_kdm_email, 1.5, wxEXPAND | wxALL, _border);
@@ -689,6 +693,8 @@ public:
 		_mail_password->Bind (wxEVT_COMMAND_TEXT_UPDATED, boost::bind (&KDMEmailPage::mail_password_changed, this));
 		_kdm_from->SetValue (std_to_wx (config->kdm_from ()));
 		_kdm_from->Bind (wxEVT_COMMAND_TEXT_UPDATED, boost::bind (&KDMEmailPage::kdm_from_changed, this));
+		_kdm_cc->SetValue (std_to_wx (config->kdm_cc ()));
+		_kdm_cc->Bind (wxEVT_COMMAND_TEXT_UPDATED, boost::bind (&KDMEmailPage::kdm_cc_changed, this));
 		_kdm_email->Bind (wxEVT_COMMAND_TEXT_UPDATED, boost::bind (&KDMEmailPage::kdm_email_changed, this));
 		_kdm_email->SetValue (wx_to_std (Config::instance()->kdm_email ()));
 		_reset_kdm_email->Bind (wxEVT_COMMAND_BUTTON_CLICKED, boost::bind (&KDMEmailPage::reset_kdm_email, this));
@@ -717,6 +723,11 @@ private:
 		Config::instance()->set_kdm_from (wx_to_std (_kdm_from->GetValue ()));
 	}
 
+	void kdm_cc_changed ()
+	{
+		Config::instance()->set_kdm_cc (wx_to_std (_kdm_cc->GetValue ()));
+	}
+	
 	void kdm_email_changed ()
 	{
 		Config::instance()->set_kdm_email (wx_to_std (_kdm_email->GetValue ()));
@@ -732,6 +743,7 @@ private:
 	wxTextCtrl* _mail_user;
 	wxTextCtrl* _mail_password;
 	wxTextCtrl* _kdm_from;
+	wxTextCtrl* _kdm_cc;
 	wxTextCtrl* _kdm_email;
 	wxButton* _reset_kdm_email;
 };
